--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
             </button>
             <h2 class="section-title">Search Results</h2>
             <div id="searchResults">
-                <!-- Search results will be generated here by script.js -->
+                <div id="searchResultsList">
+                    <!-- Search results will be generated here by script.js -->
+                </div>
                 <p id="noSearchResults" class="hidden" style="text-align: center; color: var(--text-light); font-size: 1.2rem; margin-top: 1rem;">No courses found for your search.</p>
             </div>
         </section>
